# solconnect

./: .gitignore  App.js  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  ai-agent-setup.sh  claude.sh  codex_agent_prompt.txt  codex_env.json  codex_env_review_prompt.txt  dependencies_report.md  error-handling-improvement-plan.md  setup.sh
.cargo/: config.toml
.claude/: README.md  quick-start.md
.claude/commands/: README.md  add-test.md  amplify-agent.md  auto-implement.md  build-knowledge-graph.md  debug-issue.md  detect-complexity.md  evaluate-parallel.md  evolve-workflows.md  exe-parallel.md  feature-complexity-router.md  generate-spec.md  implement-feature.md  init-parallel.md  learn-from-session.md  messaging-agent-patterns.md  prime.md  refactor-module.md  review-pr.md  run-example-workflow.md  smart-context.md  solconnect-context.md  update-knowledge.md  validate-implementation.md
.claude/intelligence/: agent-amplification.md  context-engine.md  knowledge-graph.md  memory-system.md  self-updating-docs.md  workflow-evolution.md
.claude/intelligence/analysis/: complexity-analysis-relay-failover.md  complexity-analysis-search.md  complexity-analysis-signal-protocol.md
.claude/intelligence/final-summary/: ai-agent-heaven-quest-complete.md
.claude/intelligence/team-coordination/: search-implementation-summary.md
.github/workflows/: ci.yaml
SolConnectApp/: App.js  App.tsx  CHANGELOG.md  CONTEXT.md  IMPROVEMENTS.md  README.md  SPEC.md  demo-sync.js  demo.sh  jest.config.cjs  jest.config.js  next.config.cjs  next.config.js  relay-sync.js  relay.js  relay.ts  tailwind.config.js
SolConnectApp/.context/: CONTEXT_SUMMARY.md  README.md  SESSION_TEMPLATE.md  api-reference.md  architecture-map.md  code-patterns.md  current-work.md  decision-log.md  troubleshooting.md
SolConnectApp/.context/scripts/: analyze-dependencies.sh  analyze-subsystem.sh  code-health-check.sh  demo-context-system.sh  find-related.sh  generate-context.sh  start-session.sh
SolConnectApp/docs/: ENCRYPTION_MIGRATION.md  ERROR_HANDLING_GUIDE.md  SYNC_PROTOCOL.md
SolConnectApp/docs/perf/: compute-units.md
SolConnectApp/pages/: chats.tsx  index.tsx  search.tsx
SolConnectApp/pages/thread/: [peerId].tsx
SolConnectApp/scripts/: profile-cu.cjs  profile.sh  seed-demo.cjs
SolConnectApp/src/: SolChatSDK.js  SolChatSDK.ts
SolConnectApp/src/components/: ChatListItem.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  MessageBubble.tsx  MessageReactions.tsx  MessageStatusIndicator.tsx  ThemeToggle.tsx  Toast.tsx  TypingIndicator.tsx
SolConnectApp/src/components/search/: SearchBar.tsx  (+1 more)
SolConnectApp/src/config/: relay.config.ts
SolConnectApp/src/context/: ThemeContext.tsx
SolConnectApp/src/hooks/: useMessageSearch.ts  useSearchHistory.ts  useSearchSuggestions.ts  useSolConnect.ts  useTypingIndicator.ts
SolConnectApp/src/pages/: _app.js
SolConnectApp/src/screens/: ChatListScreen.js  ChatListScreen.tsx  ChatThreadScreen.js  ChatThreadScreen.tsx  LoginScreen.js  LoginScreen.tsx  LoginScreen.web.js  MonitoringScreen.tsx  SettingsScreen.tsx
SolConnectApp/src/services/: MessageBus.ts  ReactionService.ts  SolConnectSDK.ts  TypingIndicatorService.ts  UserSettings.ts
SolConnectApp/src/store/: index.ts  types.ts
SolConnectApp/src/styles/: globals.css  theme.css
SolConnectApp/src/test-utils/: customMatchers.ts  envSetup.ts  globalSetup.ts  globalTeardown.ts  setupTests.ts
SolConnectApp/src/types/: chat.ts  errors.ts  index.ts  search.ts  typing.ts
ai-agent-heaven-universal/: IMPLEMENTATION_PLAN.md  README.md  demo.sh  setup.sh
ai-agent-heaven-universal/core/analyzers/: universal-complexity-analyzer.js
ai-agent-heaven-universal/core/templates/: universal-prompts.yaml
apps/solchat_mobile/: .eslintrc.js  app.json  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/solchat_mobile/__tests__/: LoginScreen.test.tsx
apps/solchat_mobile/src/: App.tsx
core/solchat_protocol/: Cargo.toml  build.rs
core/solchat_protocol/proto/: message.proto
core/solchat_protocol/src/: crypto.rs  lib.rs  messages.rs
database/: README.md  schema.sql
database/migrations/: 001_add_search_tables.sql  002_add_message_reactions.sql
docs/: ADR-0001-WalletIdentity.md  ADR-0002-CryptoDesign.md  ADR-0003-ProtocolSchema.md  ADR-0004-MobileBridge.md  AI_AGENT_GUIDE.md  AI_AGENT_SETUP.md  AI_OPTIMIZATION_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_WORKFLOWS.md  INTELLIGENCE_SYSTEMS.md  ISSUE_1_MESSAGE_READ_RECEIPTS.md  MESSAGE_ROUTING_IMPLEMENTATION.md  README.md  SEARCH_IMPLEMENTATION.md  SELF_IMPROVING_SYSTEMS.md  developer_setup.md  mobile-audit.md  mobile_audit_report.md
docs/performance/: performance_baseline.md
docs/tutorials/: getting-started.md
encrypted-chat/: package-lock.json
infra/: devnet-k3d.yaml
infra/helm/solconnect/: Chart.yaml  values.yaml
infra/k8s/: deployment.yaml  kustomization.yaml  relay-deployment.yaml  service.yaml  web-deployment.yaml
mobile/app/: App.js  babel.config.js  index.html  webpack.config.js
mobile/app/src/: SolChatSDK.js
mobile/components/: ThemedButton.tsx  ThemedHeader.tsx  ThemedTextInput.tsx
mobile/shared/: index.ts
mobile/shared/components/: PrimaryButton.tsx  TextInputField.tsx
mobile/shared/hooks/: useBackgroundSync.ts  useBiometricAuth.ts  usePushNotifications.ts
mobile/solchat_sdk/: Cargo.toml  build.rs
mobile/solchat_sdk/src/: ffi.rs  lib.rs  seed_vault.rs  solchat_sdk.udl  tests.rs
relay/solchat_relay/: Cargo.toml
relay/solchat_relay/src/: lib.rs  main.rs  metrics.rs  router.rs
relay/solchat_relay/tests/: integration_tests.rs  routing_test.rs
specs/: parallel_development_workflow.md  spec_advanced_search.md  spec_message_search_implementation.md  spec_message_status_indicators.md  spec_relay_failover_implementation.md  spec_template.solconnect.md
src/: SolChatSDK.js  solchat_sdk.udl
src/screens/: ChatThreadScreen.js  LoginScreen.js
(+80 files in other folders)
