[workspace]
resolver = "2"
members = [
    "core/solchat_protocol",
    "relay/solchat_relay",
    "mobile/solchat_sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SolConnect Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
libsodium-sys = "0.2"
quinn = "0.10"
clap = { version = "4.0", features = ["derive"] }

[workspace.lints.rust]
 