[package]
name = "solchat_sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mobile SDK for SolConnect with FFI bindings"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
solchat_protocol = { path = "../../core/solchat_protocol" }
uniffi.workspace = true
tokio = { workspace = true, features = ["rt"] }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[package.metadata.uniffi.bindings]
kotlin = true
swift = true 