[package]
name = "solchat_sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mobile SDK for SolConnect with FFI bindings"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
solchat_protocol = { path = "../../core/solchat_protocol" }
uniffi.workspace = true
tokio = { workspace = true, features = ["rt"] }
serde.workspace = true
serde_json.workspace = true

# Cryptographic dependencies for mobile
ed25519-dalek = { version = "1.0", features = ["rand"] }
x25519-dalek = "1.1"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
log = "0.4"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[package.metadata.uniffi.bindings]
kotlin = true
swift = true 