[package]
name = "solchat_sdk"
version = "0.1.0"
edition = "2021"
description = "Mobile SDK for SolConnect with FFI bindings"
license = "MIT"
authors = ["SolConnect Team"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
solchat_protocol = { path = "../../core/solchat_protocol" }
tokio = { workspace = true, features = ["rt", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
chrono = "0.4"
log = "0.4"

# Cryptographic dependencies for mobile
ed25519-dalek = { version = "1.0", features = ["rand"] }
x25519-dalek = "1.1"
curve25519-dalek = "3.2"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.5", features = ["zeroize_derive"] } 